Fixed weird spacing issue with search results component

--- a/css/main.scss
+++ b/css/main.scss
@@ -89,6 +89,10 @@ body {
                 flex-wrap: wrap;
                 justify-content: space-between;
                 li,a {
+                    &:hover {
+                        background-color: orange;
+                        color: black;
+                    }
                     @media (max-width: 720px) {
                         width: 100%;
                         border: dashed;
@@ -108,9 +112,9 @@ body {
     .searchbar{
         display: flex;
         flex-direction: column;
-        justify-content: center;
         align-items: center;
         width: 100%;
+        //height: 150px;
         input{
             width: 80%;
             font-family: 'Hussar';
@@ -123,31 +127,27 @@ body {
                 border: none;
             }
         }
-        .result {
-            width: 80%;
-            height: 20px;
-            display: flex;
-            flex-direction: column;
-            a {
-                width: 100%;
-                border-style:groove;
-                border-color:gray;
-                &:hover {
-                    background-color: gray;
-                }
-            }
-            }
-            
     }
+    .result {
+        display: flex;
+        flex-direction: column;
+        background-color: #313131;
+        li {
+            a {
+                color: black;
+                text-decoration: none;
+            }
+
+        }
+    }
+            
     
 
 }
 
 .post {
     width: 90%;
-    border-radius: 10px;
-    margin: 20px auto auto; 
-    padding: 10px;
+    margin: 20px auto;
 }
 
 .footer {
@@ -158,4 +158,9 @@ body {
     img {
         width: 40px;
     }
+}
+
+
+.hidden {
+    visibility: hidden;
 }
